--- a/index.html
+++ b/index.html
@@ -148,42 +148,7 @@
             color: #ff6f61;
         }
 
-        /* قسم فريق العمل */
-        .team-section {
-            margin-top: 20px;
-            padding: 15px;
-            background: rgba(40, 40, 60, 0.85);
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .team-section h3 {
-            font-size: 22px;
-            color: #ff6f61;
-            margin-bottom: 15px;
-        }
-
-        .team-section ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .team-section ul li {
-            font-size: 18px;
-            color: #eef3ff;
-            margin: 10px 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .team-section ul li i {
-            margin-left: 10px;
-            color: #ff6f61;
-        }
-
-        /* تصميم قسم الفيديو */
+        /* قسم الفيديو */
         .video-container {
             margin-top: 20px;
             padding: 20px;
@@ -255,7 +220,7 @@
                 <div class="video-container">
                     <h3>فيديو تعليمي للحروف</h3>
                     <iframe 
-                        src="https://www.youtube.com/embed/eMwHlyq-pRE" 
+                        src="https://www.youtube.com/embed/mxHICfk1Hj0" 
                         title="YouTube video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -301,20 +266,9 @@
     <footer>
         <p>&copy; 2025 Silent Sign - جميع الحقوق محفوظة 🚀✨</p>
         
-        <!-- قسم فريق العمل -->
-        <div class="team-section">
-            <h3>فريق العمل:</h3>
-            <ul>
-                <li><i class="fas fa-user"></i> محمد طارق</li>
-                <li><i class="fas fa-user"></i> محمد عبد الوهاب</li>
-                <li><i class="fas fa-user"></i> محمد رشدي</li>
-                <li><i class="fas fa-user"></i> أمنيه حسن</li>
-                <li><i class="fas fa-user"></i> وفاء محمد</li>
-                <li><i class="fas fa-user"></i> شيماء سمير</li>
-                <li><i class="fas fa-user"></i> سمر عوني</li>
-                <li><i class="fas fa-user"></i> حلمي علاء</li>
-            </ul>
-        </div>
+        <!-- النص الجديد -->
+        <p>تحت إشراف د. عطية</p>
+        <p>Created by Mohamed Tarek</p>
         
         <div class="social-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
