--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             background: linear-gradient(135deg, #1a1a2e, #16213e);
             color: white;
             padding: 20px;
+            overflow-x: auto; /* تمكين التمرير الأفقي */
             margin: 0;
-            min-width: 720px; /* تحديد عرض أدنى للصفحة */
+            min-width: 1200px; /* تحديد عرض أدنى للصفحة */
         }
         
         .animated-background {
